<resources>
    <string name="app_name">GPSSpeedTracker</string>
    <string name="action_settings">Settings</string>
    <string name="start_tracking">START TRACKING</string>
    <string name="gps_active">GPS inactive</string>
    <string name="current_speed">Current Speed:</string>
    <string name="average_speed">Average Speed:</string>
    <string name="overall_time">Overall Time:</string>
    <string name="stop_tracking">STOP TRACKING</string>
    <string name="kmhr">km/hr</string>
    <string name="s">s</string>
</resources>
