<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <tracker.gps.com.gpsspeedtracker.MyGraphView
        android:id="@+id/graph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/gps_inactive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/graph"
        android:text="@string/gps_active"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/current_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gps_inactive"
        android:text="@string/current_speed" />

    <TextView
        android:id="@+id/average_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/current_speed"
        android:text="@string/average_speed" />

    <TextView
        android:id="@+id/overall_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/average_speed"
        android:text="@string/overall_time" />

    <Button
        android:id="@+id/track"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/overall_time"
        android:text="@string/start_tracking"
        android:textColor="@android:color/black" />
</RelativeLayout>
